--- a/estilo/footer.css
+++ b/estilo/footer.css
@@ -29,11 +29,9 @@
 }
 
 .footer-texto {
-    align-self: center;
     font-size: 1.5rem;
     line-height: 1.33;
-    padding: 30px;
-    padding-left: 0px;
+    padding-bottom: 60px;
     color: var(--c6);
 }
 
